Revamp homepage, FAQ, styles, and navigation
Updated HomePage and FaqPage content for clarity and completeness, added new background images, and improved section layouts. Enhanced NavBar with new links, refined button and section SCSS for better appearance and usability, and introduced new color variables and background classes. Improved FAQ structure and added more detailed answers for common questions.

--- a/src/scss/helpers.scss
+++ b/src/scss/helpers.scss
@@ -140,6 +140,37 @@ img {
         color: $cub-scout-blue !important;
     }
 }
+.cub-scout-blue-bg {
+	background: linear-gradient(
+		to bottom,
+		lighten($cub-scout-blue, 55%),
+		lighten($cub-scout-blue, 45%)
+	);
+	
+	.title {
+        color: darken($cub-scout-blue, 20%) !important;;
+    }
+    .description {
+        color: darken($cub-scout-blue, 20%) !important;
+    }
+}
+.cub-scout-red-bg {
+	background: linear-gradient(
+		to bottom,
+		darken($cub-scout-blue, 5%),
+		darken($cub-scout-red, 5%)
+	);
+
+	.title {
+        color: $white !important;
+    }
+	.subtitle {
+        color: $white !important;
+    }
+	.description {
+        color: $white !important;
+    }
+}
 .blue-green {
 	.title {
         color: $blue-green !important;;
