--- a/src/scss/buttons.scss
+++ b/src/scss/buttons.scss
@@ -9,29 +9,43 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	padding: 0.8rem 1rem;
-	font-size: 1.4rem;
-	color: $white !important;
+	align-self: center;
+	padding: 0.8rem 1.5rem;
+	font-size: 1.2rem;
+	line-height: 1.6rem;
 	font-family: $sf-pro-text-bold;
 	text-align: center;
 	border-radius: 1rem;
-	margin-top: 1rem;
-	width: 100%;
-	height: 4rem;
+	margin: 2rem auto 0;
+	width: auto;
+	max-width: fit-content;
 	border: none;
 
 	&.blue {
-		background: linear-gradient(to bottom right, $cub-scout-blue, $purple);
+		background: linear-gradient(to bottom right, lighten($cub-scout-blue, 3%), $cub-scout-blue);
+		color: $white !important;
 
 		&:hover {
-			background: linear-gradient(to bottom right, lighten($cub-scout-blue, 3%), lighten($purple, 3%));
+			background: linear-gradient(to bottom right, lighten($cub-scout-blue, 6%), lighten($cub-scout-blue, 9%));
 			cursor: pointer;
 		}
-		&:disabled {
-			cursor: not-allowed;
-			transform: none;
-			box-shadow: none;
-			opacity: 0.3;
+	}
+	&.gold {
+		background: linear-gradient(to bottom right, lighten($cub-scout-gold, 3%), $cub-scout-gold);
+		color: $black !important;
+
+		&:hover {
+			background: linear-gradient(to bottom right, lighten($cub-scout-gold, 6%), lighten($cub-scout-gold, 9%));
+			cursor: pointer;
+		}
+	}
+	&.red {
+		background: linear-gradient(to bottom right, lighten($cub-scout-red, 3%), $cub-scout-red);
+		color: $white !important;
+
+		&:hover {
+			background: linear-gradient(to bottom right, lighten($cub-scout-red, 6%), lighten($cub-scout-red, 9%));
+			cursor: pointer;
 		}
 	}
 }
