--- a/src/scss/pages.scss
+++ b/src/scss/pages.scss
@@ -55,7 +55,13 @@
 			left: 0;
 			width: 100%;
 			height: 100%;
-			background-color: rgba($black, 0.5);
+			// background-color: rgba($black, 0.5);
+            background: linear-gradient(
+                to bottom,
+                darken($cub-scout-gold, 35%),
+                darken($cub-scout-blue, 45%)
+            );
+            opacity: 0.8;
 		}
     }
     .intro {
@@ -80,6 +86,7 @@
 				.tag-line-container {
 					border: 1rem solid $cub-scout-gold;
 					padding: 2rem;
+					border-radius: 3rem;
 
 					@media(min-width: $media-768) {
 						border: 2rem solid $cub-scout-gold;
@@ -173,15 +180,59 @@
         z-index: 2;
     }
     .section {
-        padding: 3rem 1rem 2rem;
+        display: flex;
+        justify-content: center;
+        padding: 4rem 2rem;
         z-index: 0;
         position: relative;
+        border-radius: 3rem;
+        overflow: hidden;
 
         @media(min-width: $media-768) {
             padding: 4rem 1rem;
         }
         @media(min-width: $media-992) {
             padding: 6rem 1rem;
+        }
+        &.fire-bg {
+            background-image: url("assets/home/fire.jpg");
+            background-size: cover;
+            background-position: center center;
+
+            &::before {
+                content: "";
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background: linear-gradient(
+                    to bottom,
+                    darken($cub-scout-gold, 25%),
+                    darken($cub-scout-red, 25%)
+                );
+                opacity: 0.8;
+            }
+        }
+        &.founders-bg {
+            background-image: url("assets/home/founders.jpg");
+            background-size: cover;
+            background-position: center center;
+
+            &::before {
+                content: "";
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background: linear-gradient(
+                    to bottom,
+                    darken($cub-scout-blue, 25%),
+                    darken($cub-scout-red, 25%)
+                );
+                opacity: 0.8;
+            }
         }
         &.no-y-padding {
             padding: 0 1rem;
@@ -196,6 +247,7 @@
         }
         &.tight {
             padding: 1rem;
+            justify-content: flex-start;
 
             .row {
 
@@ -272,7 +324,7 @@
                 line-height: 1.6rem;
                 color: $black;
                 max-width: 100%;
-                margin: 0 auto 3rem;
+                // margin: 0 auto 3rem;
                 font-family: $sf-pro-text-regular;
 
                 @media(min-width: $media-768) {
