Add flags section and image to homepage
Introduces a new 'Flags Over Dripping' section to the homepage with a dedicated background image. Updates button text for consistency, adds a contact section, and adjusts SCSS for new and existing backgrounds. Minor comment additions in FAQ page for clarity.

--- a/src/scss/navigation.scss
+++ b/src/scss/navigation.scss
@@ -75,7 +75,7 @@
     background: $white;
 
 	@media(min-width: $media-992) {
-		padding-bottom: 0;
+		padding-bottom: 2rem;
 	}
     .social {
         display: flex;
