--- a/src/scss/pages.scss
+++ b/src/scss/pages.scss
@@ -214,6 +214,26 @@
                 opacity: 0.8;
             }
         }
+        &.flags-bg {
+            background-image: url("assets/home/flags.jpg");
+            background-size: cover;
+            background-position: center center;
+
+            &::before {
+                content: "";
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background: linear-gradient(
+                    to bottom,
+                    darken($cub-scout-blue, 5%),
+                    darken($plum, 15%)
+                );
+                opacity: 0.8;
+            }
+        }
         &.founders-bg {
             background-image: url("assets/home/founders.jpg");
             background-size: cover;
@@ -228,8 +248,8 @@
                 height: 100%;
                 background: linear-gradient(
                     to bottom,
-                    darken($cub-scout-blue, 25%),
-                    darken($cub-scout-red, 25%)
+                    darken($ink, 5%),
+                    darken($ink, 55%)
                 );
                 opacity: 0.8;
             }
