--- a/src/scss/pages.scss
+++ b/src/scss/pages.scss
@@ -132,7 +132,7 @@
         }
     }
     .content {
-        margin-bottom: -4rem;
+        // margin-bottom: -4rem;
 
         @media(min-width: $media-576) {
             margin-bottom: 0;
@@ -150,7 +150,7 @@
                 align-items: center;
 
                 @media(min-width: $media-768) {
-                    align-items: left;
+                    // align-items: flex-start;
                 }
                 .major-tag-line {
                     text-align: center;
@@ -179,6 +179,19 @@
         position: relative;
         z-index: 2;
     }
+    .container-fluid {
+        
+        @media(max-width: $media-768) {
+
+            &.sub-page {
+                margin-bottom: -2rem;
+
+                .main-image-wrapper {
+                    top: -4rem;
+                }
+            }
+        }
+    }
     .section {
         display: flex;
         justify-content: center;
@@ -189,10 +202,13 @@
         overflow: hidden;
 
         @media(min-width: $media-768) {
-            padding: 4rem 1rem;
+            padding: 4rem 2rem;
         }
         @media(min-width: $media-992) {
-            padding: 6rem 1rem;
+            padding: 6rem 2rem;
+        }
+        &.section-margin {
+            margin-top: 2rem;
         }
         &.fire-bg {
             background-image: url("assets/home/fire.jpg");
@@ -216,6 +232,26 @@
         }
         &.flags-bg {
             background-image: url("assets/home/flags.jpg");
+            background-size: cover;
+            background-position: center center;
+
+            &::before {
+                content: "";
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background: linear-gradient(
+                    to bottom,
+                    darken($cub-scout-blue, 5%),
+                    darken($plum, 15%)
+                );
+                opacity: 0.8;
+            }
+        }
+        &.flags-bg-2 {
+            background-image: url("assets/fod/fod-cart.jpg");
             background-size: cover;
             background-position: center center;
 
@@ -287,32 +323,41 @@
                 }
             }
         }
-        &.content {
-            padding: 3rem;
-            margin-bottom: 0;
+        &.sub-page {
+            padding: 2rem 2rem;
 
+            @media(min-width: $media-768) {
+                padding: 3rem 2rem;
+            }
+            &.photo-grid {
+                padding: 0 0 1rem 0;
+                border-radius: 3rem;
+
+                @media(min-width: $media-768) {
+                    padding: 0 0 4rem 0;
+                }
+            }
             .row {
-                justify-content: center;
 
                 .title {
                     font-family: $sf-pro-display-semibold;
-                    font-size: 1.6rem;
-                    line-height: 1.8rem;
+                    font-size: 1.2rem;
+                    line-height: 1.6rem;
                     color: $black;
                     max-width: 100%;
                     margin: 0 0 1.5rem;
-    
+                
                     @media(min-width: $media-768) {
                         max-width: 30rem;
                     }
                     @media(min-width: $media-992) {
                         max-width: 58rem;
-                        font-size: 2.4rem;
-                        line-height: 2.2rem;
+                        font-size: 2.2rem;
+                        line-height: 2.6rem;
                     }
                     @media(min-width: $media-1200) {
-                        font-size: 2.4rem;
-                        line-height: 2.2rem;
+                        font-size: 2.2rem;
+                        line-height: 2.6rem;
                     }
                 }
                 .description {
@@ -321,23 +366,32 @@
                     color: $black;
                     max-width: 100%;
                     font-family: $sf-pro-text-regular;
-
+                
                     @media(min-width: $media-768) {
                         max-width: 30rem;
                     }
                     @media(min-width: $media-992) {
                         max-width: 58rem;
                         font-size: 1.2rem;
-                        line-height: 1.5rem;
+                        line-height: 1.6rem;
+                    }
+                    div + div {
+                        margin-top: 1rem;
+                    }
+                    a {
+                        color: darken($cub-scout-blue, 10%);
+                        font-family: $sf-pro-text-bold;
+
+                        &:hover {
+                            color: darken($cub-scout-blue, 20%);
+                        }
                     }
                 }
-                img {
-                    margin-top: 2rem;
-                    margin-bottom: 2rem;
-                    border-radius: 1rem;
-                }
             }
-            
+        }
+        .activity-img {
+            margin-bottom: 2rem;
+            border-radius: 3rem;
         }
         .row {
             align-items: flex-start;
@@ -346,140 +400,6 @@
 
                 .title {
                     max-width: 100%;
-                }
-            }
-            .title {
-                font-family: $sf-pro-display-semibold;
-                font-size: 2.4rem;
-                line-height: 2.4rem;
-                color: $black;
-                max-width: 100%;
-                margin: 0 0 1.5rem;
-
-                @media(min-width: $media-768) {
-                    max-width: 30rem;
-                }
-                @media(min-width: $media-992) {
-                    max-width: 58rem;
-                    font-size: 3rem;
-                    line-height: 2.9rem;
-                }
-                @media(min-width: $media-1200) {
-                    font-size: 4rem;
-                    line-height: 3.9rem;
-                }
-            }
-            .subtitle {
-                font-family: $sf-pro-text-regular;
-                color: $black;
-
-				@media(min-width: $media-768) {
-					font-size: 0.9rem;
-                	line-height: 1.3rem;
-				}
-				@media(min-width: $media-992) {
-					font-size: 1.1rem;
-                	line-height: 1.6rem;
-				}
-				&+.subtitle {
-					margin-top: 1rem;
-				}
-				span {
-					display: block;
-				}
-                span + span {
-                    font-family: $sf-pro-text-bold;
-				}
-            }
-            .description {
-                font-size: 1.2rem;
-                line-height: 1.6rem;
-                color: $black;
-                max-width: 100%;
-                // margin: 0 auto 3rem;
-                font-family: $sf-pro-text-regular;
-
-                @media(min-width: $media-768) {
-                    max-width: 30rem;
-                }
-                @media(min-width: $media-992) {
-                    max-width: 58rem;
-                    font-size: 1.4rem;
-                    line-height: 1.9rem;
-                }
-                div + div {
-                    margin-top: 1rem;
-                }
-            }
-			.info {
-				font-size: 0.9rem;
-                line-height: 1.3rem;
-                color: $coal;
-                max-width: 100%;
-                margin: 4rem auto 0;
-                font-family: $sf-pro-text-regular;
-
-                @media(min-width: $media-768) {
-					margin: 4rem auto 1rem;
-                    max-width: 30rem;
-                }
-                @media(min-width: $media-992) {
-                    max-width: 38rem;
-                    font-size: 1.1rem;
-                    line-height: 1.6rem;
-                }
-				&+.button-container {
-					margin-top: 4rem;
-				}
-				.label-line {
-					width: 100%;
-					height: 1px;
-					background-color: rgba($abyss, 0.3);
-					margin: 1rem 0;
-
-					@media(min-width: $media-768) {
-						background-color: rgba($abyss, 0.7);
-					}
-				}
-			}
-            .paragraph-list {
-                font-size: 1rem;
-                line-height: 1.4rem;
-                color: $charcoal;
-                max-width: 42rem;
-                font-family: $sf-pro-text-regular;
-                margin: 0 auto;
-
-				&.legal {
-
-					.paragraph-title {
-						text-align: center;
-					}
-					.paragraph-description {
-						text-indent: 2rem;
-					}
-				}
-                .paragraph-title {
-                    font-size: 1.2rem;
-                    line-height: 1.6rem;
-                    font-family: $sf-pro-display-semibold;
-                    margin-bottom: .5rem;
-					// text-align: center;
-                }
-                .paragraph-description {
-                    margin-bottom: 2rem;
-
-					.bold {
-
-						.link {
-							font-family: $sf-pro-text-bold;
-						}
-					}
-					ul {
-						list-style-type: disc;
-						text-indent: 0;
-						margin-left: 4rem;
-					}
                 }
             }
         }
@@ -499,6 +419,140 @@
             .subtitle {
                 position: relative;
             }
+        }
+    }
+}
+.title {
+    font-family: $sf-pro-display-semibold;
+    font-size: 2.4rem;
+    line-height: 2.4rem;
+    color: $black;
+    max-width: 100%;
+    margin: 0 0 1.5rem;
+
+    @media(min-width: $media-768) {
+        max-width: 30rem;
+    }
+    @media(min-width: $media-992) {
+        max-width: 58rem;
+        font-size: 3rem;
+        line-height: 2.9rem;
+    }
+    @media(min-width: $media-1200) {
+        font-size: 4rem;
+        line-height: 3.9rem;
+    }
+}
+.subtitle {
+    font-family: $sf-pro-text-regular;
+    color: $black;
+
+    @media(min-width: $media-768) {
+        font-size: 0.9rem;
+        line-height: 1.3rem;
+    }
+    @media(min-width: $media-992) {
+        font-size: 1.1rem;
+        line-height: 1.6rem;
+    }
+    &+.subtitle {
+        margin-top: 1rem;
+    }
+    span {
+        display: block;
+    }
+    span + span {
+        font-family: $sf-pro-text-bold;
+    }
+}
+.description {
+    font-size: 1.2rem;
+    line-height: 1.6rem;
+    color: $black;
+    max-width: 100%;
+    // margin: 0 auto 3rem;
+    font-family: $sf-pro-text-regular;
+
+    @media(min-width: $media-768) {
+        max-width: 30rem;
+    }
+    @media(min-width: $media-992) {
+        max-width: 58rem;
+        font-size: 1.4rem;
+        line-height: 1.9rem;
+    }
+    div + div {
+        margin-top: 1rem;
+    }
+}
+.info {
+    font-size: 0.9rem;
+    line-height: 1.3rem;
+    color: $coal;
+    width: 100%;
+    margin: 2rem auto 0;
+    font-family: $sf-pro-text-regular;
+
+    @media(min-width: $media-768) {
+        margin: 4rem auto 1rem;
+        width: 30rem;
+    }
+    @media(min-width: $media-992) {
+        width: 38rem;
+        font-size: 1.1rem;
+        line-height: 1.6rem;
+    }
+    &+.button-container {
+        margin-top: 4rem;
+    }
+    .label-line {
+        width: 100%;
+        height: 1px;
+        background-color: rgba($abyss, 0.3);
+        margin: 1rem 0;
+
+        @media(min-width: $media-768) {
+            background-color: rgba($abyss, 0.7);
+        }
+    }
+}
+.paragraph-list {
+    font-size: 1rem;
+    line-height: 1.4rem;
+    color: $charcoal;
+    max-width: 42rem;
+    font-family: $sf-pro-text-regular;
+    margin: 0 auto;
+
+    &.legal {
+
+        .paragraph-title {
+            text-align: center;
+        }
+        .paragraph-description {
+            text-indent: 2rem;
+        }
+    }
+    .paragraph-title {
+        font-size: 1.2rem;
+        line-height: 1.6rem;
+        font-family: $sf-pro-display-semibold;
+        margin-bottom: .5rem;
+        // text-align: center;
+    }
+    .paragraph-description {
+        margin-bottom: 2rem;
+
+        .bold {
+
+            .link {
+                font-family: $sf-pro-text-bold;
+            }
+        }
+        ul {
+            list-style-type: disc;
+            text-indent: 0;
+            margin-left: 4rem;
         }
     }
 }
