Enhance FOD page content and update styles
Expanded the description and reorganized the 'Why This Matters' section on the FOD page for clarity and impact, introducing new sub-sections with titles. Updated SCSS to support new description backgrounds and sub-title styling. Adjusted NavBar link order for improved navigation.

--- a/src/scss/pages.scss
+++ b/src/scss/pages.scss
@@ -375,6 +375,10 @@
                         font-size: 1.2rem;
                         line-height: 1.6rem;
                     }
+                    &.description-bg {
+                        // background-color: rgba($black, 0.3);
+                        padding: 1rem;
+                    }
                     div + div {
                         margin-top: 1rem;
                     }
@@ -384,6 +388,23 @@
 
                         &:hover {
                             color: darken($cub-scout-blue, 20%);
+                        }
+                    }
+                    .sub-title {
+                        display: block;
+                        font-family: $sf-pro-text-semibold;
+                        font-size: 1rem;
+                        line-height: 1.3rem;
+                        color: $white;
+                        max-width: 100%;
+                        
+                        @media(min-width: $media-768) {
+                            font-size: 1rem;
+                            line-height: 1.4rem;
+                        }
+                        @media(min-width: $media-992) {
+                            font-size: 1.2rem;
+                            line-height: 1.6rem;
                         }
                     }
                 }
