Add FOD FAQ, update styles, and fix resource link
Added a detailed Flags Over Dripping (FOD) FAQ section to FaqPage.vue. Updated HomePage.vue to use a router-link for the resources button. Improved SCSS with a new .cub-scout-red class and adjusted .cub-scout-gold-darken styling. Minor text update in FodPage.vue and added a new logo image.

--- a/src/scss/typography.scss
+++ b/src/scss/typography.scss
@@ -143,7 +143,8 @@ a {
         border: 0.05rem solid $cub-scout-gold;
     }
     &.cub-scout-gold-darken {
-        background-color: darken($cub-scout-gold, 20%);
+        color: darken($cub-scout-gold, 50%);
+        background: $cub-scout-gold;
     }
     &.plum {
         background: $plum;
@@ -153,6 +154,9 @@ a {
     }
     &.cub-scout-blue {
         background: $cub-scout-blue;
+    }
+    &.cub-scout-red {
+        background: $cub-scout-red;
     }
     &.roasted {
         background: $roasted;
