--- a/src/scss/navigation.scss
+++ b/src/scss/navigation.scss
@@ -173,6 +173,15 @@
             }
         }
     }
+    .logo-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .logo {
+            width: 10rem;
+        }
+    }
 }
 
 
