Update FAQ and Resources pages with new info and styles
Expanded the FAQ page with a new Camping section, clarified cost and uniform details, and improved the Flags Over Dripping instructions. Updated Resources page with corrected titles, added Scout Store address, and split council resources into overview and resources cards. Added new SCSS classes and variables for updated label colors.

--- a/src/scss/typography.scss
+++ b/src/scss/typography.scss
@@ -152,6 +152,9 @@ a {
     &.currency {
         background: darken($currency, 10%);
     }
+    &.currency-darken {
+        background: darken($currency, 20%);
+    }
     &.cub-scout-blue {
         background: $cub-scout-blue;
     }
@@ -163,6 +166,9 @@ a {
     }
     &.lavender {
         background: $lavender;
+    }
+    &.brown {
+        background: $brown;
     }
     &.coal {
         background: $coal;
