--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -11,6 +11,7 @@ $cub-scout-red: #b1151b;
 
 $white: #FFFFFF;
 $black: #000000;
+$brown: #705043;
 $ink: #15181d;
 $abyss: #1c2026;
 $coal: #182c4b;
