Replace History page with About page and update routes
Removed HistoryPage.vue and added AboutPage.vue with new content and images. Updated navigation links, router configuration, and references from '/history' to '/about'. Adjusted HomePage and NavBar to reflect the new About page. Added images for the About page and updated styles for new image classes.

--- a/src/scss/pages.scss
+++ b/src/scss/pages.scss
@@ -414,6 +414,13 @@
             margin-bottom: 2rem;
             border-radius: 3rem;
         }
+        .derby-img {
+            margin-bottom: 2rem;
+            border: 0.5rem solid lighten($cub-scout-gold, 20%);
+            padding: 2rem 1rem;
+            border-radius: 3rem;
+
+        }
         .row {
             align-items: flex-start;
 
